# goit-pythonweb-hw-10

./: .example.env  main.py  pyproject.toml
src/conf/: config.py
src/core/: depend_service.py  email_token.py
src/database/: db.py
src/entity/: models.py
src/repository/: base.py  contacts_repository.py  refresh_token_repository.py  user_repository.py
src/routes/: auth.py  contacts_rotes.py  users.py
src/schemas/: contact_schema.py  token.py  user.py
src/services/: auth.py  contacts_services.py  email.py  user.py
src/services/templates/: verify_email.html
